# ai-sales-intelligence-platform

./: .gitignore  .tflint.hcl  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: app-validate.yml  container-validate.yml  terraform-validate.yml
agents/admin-mcp/: package.json
agents/admin-mcp/src/: audit.js  index.js  server.js
agents/admin-mcp/test/: server.test.mjs
agents/dashboard/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json
agents/dashboard/app/: layout.tsx  page.tsx
agents/dashboard/src/: index.js
agents/harvester/: .dockerignore  Dockerfile  requirements.txt
agents/harvester/src/: consumer.py  main.py  processor.py
agents/harvester/tests/: test_processor.py
agents/holdsworth/: Dockerfile  package.json
agents/holdsworth/src/: agent-loop.js  index.js  scheduler.js
agents/holdsworth/test/: scheduler.test.mjs  webhooks.test.mjs
agents/profiler/: Dockerfile  requirements.txt
agents/scout/: requirements.txt
agents/shared/: README.md  schema.json
agents/shared/python/: pyproject.toml
agents/shared/python/src/: __init__.py  config.py  db.py  jwt_verifier.py  logger.py  sqs_consumer.py
agents/shared/python/tests/: test_config.py  test_db.py  test_jwt.py
agents/writer/: package.json
docs/: DATABASE.md  DEPLOYMENT.md  MCP_TOOLS.md
docs/diagrams/: system-architecture.mermaid
migrations/: 001_create_tenants.sql  002_create_jobs.sql  003_create_audit_log.sql  004_create_outreach_events.sql  README.md
terraform/: README.md
(+103 files in other folders)
